k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pendo-api
  namespace: pendo
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: pendo-api
